--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,5 @@ services:
   web:
     image: arun1705/CommercialInsurancenode
     container_name:Commercial-Insurance
-    ports:
-     - "8082:8082"
-    #command: marin-service start
+    ports: "8082:8082"
+    #command: CI-service start
