--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '2'
 services:
   web:
-    image: arun1705/CommercialInsurancenode
-    container_name: Commercial-Insurance
+    image: arun1705/commercial-insurancenode
+    container_name: commercial-insurancenode
     ports:
      - "8082:8082"
     #command: CI-service start
