--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "scripts": {
 "start": "node app.js"
 },
+  "engines": {
+        "node": "6.11.0",
+        "npm": "3.10.10"
+},
   "dependencies": {
     "basic-auth": "^1.0.4",
     "bcryptjs": "^2.3.0",
