--- a/package.json
+++ b/package.json
@@ -9,26 +9,33 @@
         "node": "6.11.0",
         "npm": "3.10.10"
 },
-  "dependencies": {
-    "basic-auth": "^1.0.4",
-    "bcryptjs": "^2.3.0",
-    "bluebird": "^3.5.0",
-    "body-parser": "^1.17.2",
-    "cfenv": "^1.0.4",
-    "cloudant": "^1.7.1",
-    "collections": "^3.0.0",
-    "config": "^1.20.1",
-    "date-and-time": "^0.5.0",
-    "express": "^4.14.0",
-    "hfc": "^0.6.5",
-    "jsonwebtoken": "^7.1.9",
-    "log4js": "^0.6.33",
-    "mongoose": "^4.6.0",
-    "morgan": "^1.7.0",
-    "multer": "^1.3.0",
-    "nodemailer": "^2.6.0",
-    "randomstring": "^1.1.5",
-    "underscore": "^1.8.3",
-    "uuid": "^2.0.2"
-  }
+  
+    "dependencies": {
+        "bcryptjs": "^2.4.3",
+        "bluebird": "^3.3.5",
+        "body-parser": "^1.15.2",
+        "caseless": "^0.12.0",
+        "cfenv": "^1.0.4",
+        "cloudant": "^1.7.1",
+        "collections": "^3.0.0",
+        "config": "^1.20.1",
+        "cors": "*",
+        "express": "^4.14.0",
+        "grpc": "^1.4.1",
+        "har-validator": "^5.0.3",
+        "hfc": "^0.6.5",
+        "jsonwebtoken": "^7.1.9",
+        "log4js": "^0.6.33",
+        "mongoose": "^4.6.0",
+        "morgan": "^1.7.0",
+        "nodemailer": "^2.6.0",
+        "performance-now": "^2.1.0",
+        "randomstring": "^1.1.5",
+        "tunnel-agent": "^0.6.0",
+        "underscore": "^1.8.3",
+        "uuid": "^2.0.2",
+        "multer" :"*"
+      
+    }
 }
+
